--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,24 @@ edition = "2018"
 [dependencies]
 owlchess = "0.4.0"
 rand = "0.9"
-unmtx-gpu = "0.1.2"
+unmtx-gpu = { version = "0.1.2", default-features = false }
+
+[features]
+default = ["opencl"]
+default_cublas = ["unmtx-gpu/default_cublas"]
+default_mma = ["unmtx-gpu/default_mma"]
+opencl = ["unmtx-gpu/opencl"]
+cuda = ["unmtx-gpu/cuda"]
+cuda-version-from-build-system = ["cuda", "unmtx-gpu/cuda-version-from-build-system"]
+cuda-12060 = ["cuda", "unmtx-gpu/cuda-12060"]
+cuda-12050 = ["cuda", "unmtx-gpu/cuda-12050"]
+cuda-12040 = ["cuda", "unmtx-gpu/cuda-12040"]
+cuda-12030 = ["cuda", "unmtx-gpu/cuda-12030"]
+cuda-12020 = ["cuda", "unmtx-gpu/cuda-12020"]
+cuda-12010 = ["cuda", "unmtx-gpu/cuda-12010"]
+cuda-12000 = ["cuda", "unmtx-gpu/cuda-12000"]
+cuda-11080 = ["cuda", "unmtx-gpu/cuda-11080"]
+cuda-11070 = ["cuda", "unmtx-gpu/cuda-11070"]
+cuda-11060 = ["cuda", "unmtx-gpu/cuda-11060"]
+cuda-11050 = ["cuda", "unmtx-gpu/cuda-11050"]
+cuda-11040 = ["cuda", "unmtx-gpu/cuda-11040"]
