--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 owlchess = "0.4.0"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 rand = "0.9"
 unmtx-gpu = { version = "0.1.2", default-features = false }
 
