--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
 libc = "0.2"
 owlchess = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
