--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
+fathom-syzygy = "0.1.0"
 libc = "0.2"
 owlchess = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
